[project]
name = "image-captioning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "kagglehub>=0.3.11",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "pycocotools>=2.0.8",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.51.1",
]
