[project]
name = "image-captioning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aac-metrics>=0.5.4",
    "ipykernel>=6.29.5",
    "kagglehub>=0.3.11",
    "matplotlib>=3.10.1",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "torch>=2.6.0",
    "torchmetrics>=1.7.1",
    "torchvision>=0.21.0",
    "transformers>=4.51.1",
]
